--- a/src/pages/admin/component/AdminNotice.css
+++ b/src/pages/admin/component/AdminNotice.css
@@ -4,3 +4,97 @@
     width: calc(100vw - var(--sidebar-width-open) - 180px);
     height: 100%;
 }
+
+.notice-title {
+    color: #ecf0f1;
+    font-size: 28px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.controls {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.left-controls {
+    display: flex;
+    align-items: center;
+}
+
+.left-controls input {
+    margin-right: 10px;
+    padding: 5px;
+}
+
+button {
+    padding: 5px 10px;
+}
+
+.admin-notice-list-container ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.admin-notice-list-container li.notice-item {
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+    cursor: pointer;
+}
+
+.admin-notice-list-container li.notice-item .notice-header {
+    margin: 0 0 10px 0;
+    font-size: 24px;
+    color: #ecf0f1;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.admin-notice-list-container li.notice-item .notice-header.active {
+    background-color: #bdc3c7;
+}
+
+.admin-notice-list-container li.notice-item .notice-content {
+    margin: 0;
+    color: #2c3e50;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    min-height: 200px;
+}
+
+.admin-notice-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.admin-notice-modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+}
+
+.admin-notice-modal-content input {
+    margin-bottom: 10px;
+    width: 100%;
+    padding: 5px;
+}
+
+.admin-notice-modal-content button {
+    margin-right: 10px;
+    padding: 5px 10px;
+}
