--- a/src/pages/admin/component/AdminUserList.css
+++ b/src/pages/admin/component/AdminUserList.css
@@ -686,7 +686,7 @@
     border-radius: 8px; /* 모서리 둥글게 (선택 사항) */
 }
 
-.chat-content-item {
+.chat-content-container .chat-content-item {
     margin: 30px;
     display: flex;
     flex-direction: column;
@@ -694,22 +694,22 @@
     margin-bottom: 15px;
 }
 
-.chat-content-item.eq {
+.chat-content-container .chat-content-item.eq {
     align-items: flex-end; /* Align to the right for 'eq' */
 }
 
-.chat-content-item.ne {
+.chat-content-container .chat-content-item.ne {
     align-items: flex-start; /* Align to the left for 'ne' */
 }
 
-.chat-content-item-user {
+.chat-content-container .chat-content-item .chat-content-item-user {
     font-size: 1.2em;
     color: #007bff;
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-.chat-content-item-content {
+.chat-content-container .chat-content-item .chat-content-item-user.chat-content-item-content {
     background-color: #f0f0f0;
     padding: 10px;
     border-radius: 10px;
@@ -717,23 +717,25 @@
     font-size: 1.1em;
 }
 
-.chat-content-item.eq .chat-content-item-content {
+.chat-content-container .chat-content-item.eq .chat-content-item-content {
     background-color: #007bff;
     color: white;
 }
 
-.chat-content-item.ne .chat-content-item-content {
+.chat-content-container .chat-content-item.ne .chat-content-item-content {
     background-color: #e0e0e0;
     color: #333;
 }
 
-.chat-content-item-time {
+.chat-content-container .chat-content-item-time {
     font-size: 12px;
     color: #999;
     margin-top: 5px;
 }
 
-.suspension-buttons {
+
+/** 휴면 기간 추가 */
+.user-detail-container .suspension-buttons {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -741,7 +743,7 @@
     margin-left: 20px;
 }
 
-.suspension-buttons button {
+.user-detail-container .suspension-buttons button {
     background-color: #007bff; /* Primary color */
     color: white; /* Text color */
     border: none; /* Remove border */
@@ -752,20 +754,20 @@
     font-size: 0.9em; /* Font size */
 }
 
-.suspension-buttons button:hover {
+.user-detail-container .suspension-buttons button:hover {
     background-color: #0056b3; /* Darker shade on hover */
 }
 
-.suspension-buttons button:active {
+.user-detail-container .suspension-buttons button:active {
     background-color: #004494; /* Even darker shade on click */
 }
 
-.suspension-buttons button:focus {
+.user-detail-container .suspension-buttons button:focus {
     outline: none; /* Remove default outline */
     box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5); /* Custom focus outline */
 }
 
-.added-days {
+.user-detail-container .added-days {
     margin-top: 10px;
     font-size: 0.9em;
     color: #555;
@@ -773,7 +775,7 @@
     text-align: left; /* Align text to the left */
 }
 
-.close-btn {
+.user-detail-container .close-btn {
     position: absolute; /* Position relative to the chat-content-container */
     top: 10px;
     left: 10px;
