--- a/src/pages/MyPageContainer.css
+++ b/src/pages/MyPageContainer.css
@@ -1,17 +1,11 @@
 /* 공통 초기화 */
-* {
-    margin: 0; 
-    padding: 0; 
-    box-sizing: border-box;
-  }
-  html, body {
-    width: 100%; 
-    height: 100%;
-    background: #333;
-    font-family: sans-serif;
-  }
-  
-  /* 전체 컨테이너 */
+.mypage-container {
+  margin: 0; 
+  padding: 0; 
+  box-sizing: border-box;
+}
+
+/* 전체 컨테이너 */
   .mypage-container {
     position: relative;
     width: 100vw;
