--- a/src/pages/MyPageContainer.css
+++ b/src/pages/MyPageContainer.css
@@ -1,11 +1,21 @@
 /* 공통 초기화 */
-.mypage-container {
-  margin: 0; 
-  padding: 0; 
-  box-sizing: border-box;
+.mypage-container .mypage-password-container.front,
+.mypage-container .profile-section.front {
+  transition: transform 0.8s ease;
+  transform: translateX(0);
 }
 
-/* 전체 컨테이너 */
+.mypage-container .mypage-password-container.left,
+.mypage-container .profile-section.left {
+  position: absolute;
+  padding: 100px;
+  transition: transform 0.8s ease;
+  transform: translateX(-1000px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+}
+  
+  /* 전체 컨테이너 */
   .mypage-container {
     position: relative;
     width: 100vw;
@@ -67,6 +77,8 @@
     justify-content: center;
     align-items: center;
   }
+  
+
   
   .mypage-container .profile-section {
     width: 80%;
@@ -143,7 +155,6 @@
       position: absolute;
       top: 95px;
       width: 100%;
-      height: 100%;
       z-index: 1000;
       text-align: center;
       cursor: pointer;
@@ -158,3 +169,23 @@
       color: var(--main-color-2);
     }
 
+
+
+/*** 비밀번호 변경 영역 ***/
+.mypage-container .mypage-password-container {
+  width: 80%;
+  max-width: 350px;
+}
+
+.mypage-container .mypage-password-container input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
