--- a/src/pages/MyPageContainer.css
+++ b/src/pages/MyPageContainer.css
@@ -178,14 +178,45 @@
 }
 
 .mypage-container .mypage-password-container input {
+
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
+  border: none;
+  border-bottom: 3px solid #2997c6;
+  outline: none;
   border-radius: 4px;
+
+  font-size: 1.5rem;
+  background-color: transparent;
+
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
+
+.mypage-container .mypage-password-container .mypage-password-label {
+  margin: 40px 0px 5px 0px;
+}
+
+.mypage-container .mypage-password-container .old-password {
+  margin-bottom: 70px;
+}
+
+
+/*** 비밀번호 변경 버튼 ***/
+.mypage-container .mypage-password-container .mypage-password-btn {
+  margin-top: 40px;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--main-color-2);
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
