--- a/src/pages/MyPageContainer.css
+++ b/src/pages/MyPageContainer.css
@@ -220,3 +220,21 @@
   cursor: pointer;
 }
 
+.mypage-container .profile-id-input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 3px solid #2997c6;
+  outline: none;
+  border-radius: 4px;
+
+  font-size: 1.5rem;
+  background-color: transparent;
+
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
