--- a/src/pages/MyPageContainer.css
+++ b/src/pages/MyPageContainer.css
@@ -1,6 +1,7 @@
 /* 공통 초기화 */
 .mypage-container .mypage-password-container.front,
 .mypage-container .profile-section.front {
+  margin-top: 100px;
   transition: transform 0.8s ease;
   transform: translateX(0);
 }
@@ -8,10 +9,9 @@
 .mypage-container .mypage-password-container.left,
 .mypage-container .profile-section.left {
   position: absolute;
-  padding: 100px;
+  margin-top: 100px;
   transition: transform 0.8s ease;
   transform: translateX(-1000px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
 }
   
