feat: Chat linked + Array

--- a/src/css/main/style.css
+++ b/src/css/main/style.css
@@ -323,7 +323,7 @@
   text-align: center;
   line-height: 100px;
 
-  font-family: "hana", serif;
+  font-family: "SBAggroB", serif;
   font-style: heavy;
 }
 
